Micro/kubernetes/auth/auth-svc-local.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth
  labels:
    app: auth
spec:
  ports:
  - port: 80
    targetPort: 80
    nodePort: 31080
    name: http
  selector:
    app: auth
  type: NodePort
